Fix the problem where long content overflow

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -251,6 +251,7 @@ a {
     & .center,
     & footer {
       min-width: 100%;
+      max-width: 100%;
       margin-left: auto;
       margin-right: auto;
       @media all and ($tablet) {
